<resources>
    <string name="app_name">Inventory App</string>
    <string name="tab_text_0">File Explorer</string>
    <string name="explore_file">Explore Files Here …</string>
    <string name="tab_text_1">Price Book</string>
    <string name="tap">Tap</string>
    <string name="to_import_price_book">to Import Price Book</string>
    <string name="to_add_item">to Add Item</string>
    <string name="tab_text_2">Inventory</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Welcome to %1$s section.</string>
    <string name="upc">UPC</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="last_quantity">Prev. Quantity</string>
</resources>
