<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/pageHeading"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:padding="2sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:textSize="17sp"
            android:textAlignment="center"
            android:layout_weight="1.5"
            android:id="@+id/upcCode"
            android:text="@string/upc"
            android:background="@drawable/border_editable"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="4sp"/>
        <TextView
            android:textSize="17sp"
            android:textAlignment="center"
            android:layout_weight="3.5"
            android:id="@+id/description"
            android:text="@string/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:background="@drawable/border_editable"
            android:padding="4sp"/>

    </LinearLayout>


    <FrameLayout
        android:layout_marginTop="1sp"
        android:layout_below="@+id/pageHeading"
        android:background="@color/white"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/section_label"
            android:gravity="center"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:textColor="@color/background"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@color/white"
                android:gravity="center"
                android:visibility="visible"
                android:text="@string/tap"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.design.widget.FloatingActionButton
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:backgroundTint="@color/background"
                android:src="@drawable/add"/>
            <TextView
                android:textStyle="bold"
                android:textColor="@color/background"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@color/white"
                android:gravity="center"
                android:visibility="visible"
                android:text="@string/to_import_price_book"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:background="@color/background"
            android:id="@+id/recyclerView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </FrameLayout>

    <!--<android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:backgroundTint="@color/newItem"
        android:src="@drawable/add"/>-->

</RelativeLayout>