<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:text="@string/upc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text=":"/>
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvUpc"
                    android:paddingLeft="5sp"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:textSize="18sp"
                    android:text="@string/upc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:inputType="text"
                    android:id="@+id/etUpc"
                    android:visibility="gone"
                    android:hint="@string/upc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:text="@string/description"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text=":"/>
            <FrameLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvDescription"
                    android:paddingLeft="5sp"
                    android:layout_gravity="center"
                    android:gravity="center|left"
                    android:textSize="18sp"
                    android:text="@string/description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <EditText
                    android:inputType="text"
                    android:id="@+id/etDescription"
                    android:visibility="gone"
                    android:hint="@string/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_margin="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="Previous"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text=" :"/>
                </LinearLayout>
                <FrameLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvPreviousQuantity"
                        android:textSize="18sp"
                        android:text="@string/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <EditText
                        android:inputType="text"
                        android:id="@+id/etPreviousQuantity"
                        android:visibility="gone"
                        android:hint="@string/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="Current"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text=" :"/>
                </LinearLayout>

                <FrameLayout
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvQuantity"
                        android:textSize="18sp"
                        android:text="@string/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <EditText
                        android:inputType="text"
                        android:id="@+id/etQuantity"
                        android:visibility="gone"
                        android:hint="@string/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="Total"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_gravity="center"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:text=" :"/>
                </LinearLayout>
                <FrameLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tvTotalQuantity"
                        android:textSize="18sp"
                        android:text="@string/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                    <EditText
                        android:inputType="text"
                        android:id="@+id/etTotalQuantity"
                        android:visibility="gone"
                        android:hint="@string/quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </FrameLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="10sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/prevBtn"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Prev"
                    android:textSize="20sp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/deleteBtn"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delete"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/editBtn"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Edit"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/clearBtn"
                android:visibility="gone"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clear"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/saveBtn"
                android:visibility="gone"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Clear"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nextBtn"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Next"
                    android:textSize="20sp"/>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</RelativeLayout>